whatpulse (2.2.1-1) UNRELEASED; urgency=low

  * New upstream release
  * Add libx11-6 to Build-Depends
  * Fix removal of capabilities on first run of postinst script, when the binary
    doesn't have any capabilities.
  * Don't remove and recreate input group on every upgrade.
  * Install desktop file in correct directory

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Mon, 14 Oct 2013 15:45:35 +0200

whatpulse (2.1.1-1) unstable; urgency=low

  * Initial release.

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Tue, 21 May 2013 23:49:47 +0200