@@ -2,7 +2,7 @@ Source: whatpulse
 Section: non-free/web
 Priority: extra
 Maintainer: Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>
-Build-Depends: debhelper (>= 9), libqtcore4, libqtgui4, libqtwebkit4, libqt4-sql, libqt4-script, libqt4-network, libsqlite3-0, libx11-6
+Build-Depends: debhelper (>= 9), libssl-dev, libqtcore4, libqtgui4, libqtwebkit4, libqt4-sql, libqt4-script, libqt4-network, libsqlite3-0, libx11-6
 Standards-Version: 3.9.4
 Homepage: http://www.whatpulse.org/
 Vcs-Browser: https://github.com/oxan/whatpulse-debian
@@ -11,7 +11,7 @@ Vcs-Git: https://github.com/oxan/whatpulse-debian.git
 Package: whatpulse
 Architecture: amd64 i386
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, libcap2-bin
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${ssl:Depends}, adduser, libcap2-bin
 Recommends: udev
 Description: discover and track your keyboard, mouse and network usage
  This is the WhatPulse client for Linux. WhatPulse is a program to track your 
