@@ -1,2 +1,3 @@
 usr/bin/
+usr/lib/whatpulse/
 usr/share/whatpulse/
