@@ -1,3 +1,3 @@
-whatpulse usr/bin/
+whatpulse usr/lib/whatpulse/
 debian/logo.png usr/share/whatpulse/
 debian/whatpulse.desktop usr/share/applications/
