@@ -1,0 +1,3 @@
+#!/bin/sh
+export LD_LIBRARY_PATH="/usr/lib/whatpulse"
+exec /usr/lib/whatpulse/whatpulse
